--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -2,7 +2,7 @@
   <main class="main d-flex align-items-center">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 mx-auto">
+        <div class="col-md-6 mx-auto">
           <div class="card-group">
             <div class="card p-4">
               <div class="card-body">
@@ -22,23 +22,11 @@
                     <input type="password" class="form-control" placeholder="Password" autocomplete="current-password" required>
                   </div>
                   <div class="row">
-                    <div class="col-6">
-                      <button type="button" class="btn btn-primary px-4">Login</button>
-                    </div>
-                    <div class="col-6 text-right">
-                      <button type="button" class="btn btn-link px-0">Forgot password?</button>
+                    <div class="col-12">
+                      <button type="button" class="btn btn-primary btn-block" (click)="login()">Login</button>
                     </div>
                   </div>
                 </form>
-              </div>
-            </div>
-            <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
-              <div class="card-body text-center">
-                <div>
-                  <h2>Sign up</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <button type="button" class="btn btn-primary active mt-3">Register Now!</button>
-                </div>
               </div>
             </div>
           </div>
